--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 
-
 .container {
   padding: 10px 2px;
 }
@@ -8,8 +7,8 @@
   padding: 0 3px;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   box-sizing: border-box;
 }
 
@@ -43,10 +42,6 @@
   margin-top: 10px;
 }
 
-.navbar-icon p {
-  background-color: #293241;
-}
-
 .navbar-icon {
   box-sizing: border-box;
   display: flex;
@@ -65,10 +60,10 @@ h1,p, h2 {
   color: #e0fbfc;
 }
 
-p {
+/* p {
   margin : 6px 0;
   background-color: #1d3557;
-}
+} */
 
 h1, h2 {
   padding: 0 15px;
@@ -94,9 +89,10 @@ img {
 
 .search {
   width: 100%;
+  margin-top: -90px;
 }
 .search input {
-  width: 80%;
+  width: 40%;
   margin: 0 10px;
   height: 40px;
   background-color: azure;
