--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,8 @@
   padding: 0 3px;
   display: flex;
   flex-direction: column;
-  /* height: 100%;
-  width: 100%; */
   box-sizing: border-box;
+  margin-top: 160px;
 }
 
 .app-body-text {
@@ -22,12 +21,15 @@
 }
 
 .navbar {
-  height: 100px;
+  height: 150px;
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-self: end;
+  position: fixed;
+  background-color: #293241;
+  margin-top: -20px;
 }
 
 .navbar button {
@@ -37,9 +39,9 @@
 .navbar-icon img {
   height: 64px;
   width: 64px;
-  border-radius: 50px;
+  border-radius: 60px;
   object-fit: cover;
-  margin-top: 10px;
+  
 }
 
 .navbar-icon {
@@ -89,14 +91,25 @@ img {
 
 .search {
   width: 100%;
-  margin-top: -90px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: fixed;
+  background-color: #293241;
+  margin-top: 100px;
+  padding-bottom: 10px;
 }
+
 .search input {
   width: 40%;
   margin: 0 10px;
   height: 40px;
   background-color: azure;
   border-radius: 3px;
+}
+
+.search button {
+  margin: 0 10px;
 }
 
 .selected-button{
