--- a/src/components/CreatePlaylist/Styles.css
+++ b/src/components/CreatePlaylist/Styles.css
@@ -1,12 +1,21 @@
 
 .create-playlist-container{
     display: flex;
+    position: fixed;
     justify-content: center;
     align-items: center;
     align-self: center;
     justify-self: center;
-    height: 300px;
+    height: 100vh;
     width: 100%;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.create-playlist-container button {
+    height: 20px;
+    width: 30px;
+    margin-left: 85%;
+    background-color: rgb(209, 46, 46);
 }
 
 label {
@@ -42,4 +51,8 @@ input[type="submit"]:hover{
     padding: 10px;
     border-radius: 5px;
     background-color: #4c5669;
+}
+
+.display-none {
+    display: none;
 }
