--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 
-.container {
+/* .container {
   padding: 10px 2px;
-}
+} */
 
-.App {
+/* .App {
   padding: 0 3px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   margin-top: 160px;
-}
+} */
 
 .app-body-text {
   font-size: xx-large;
