--- a/src/components/CreatePlaylist/Styles.css
+++ b/src/components/CreatePlaylist/Styles.css
@@ -9,13 +9,23 @@
     height: 100vh;
     width: 100%;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 99;
 }
 
 .create-playlist-container button {
-    height: 20px;
-    width: 30px;
-    margin-left: 85%;
+    justify-self: center;
+    align-self: center;
+    padding: 10px 15px;
+    margin-left: 80%;
     background-color: rgb(209, 46, 46);
+}
+.create-playlist-container button:hover {
+    cursor: pointer;
+    justify-self: center;
+    align-self: center;
+    padding: 10px 15px;
+    margin-left: 80%;
+    background-color: rgb(150, 36, 36);
 }
 
 label {
@@ -27,6 +37,7 @@ input {
     margin: 10px;
     width: 300px;
     height: 30px;
+    color: black;
 }
 
 input:focus{
